feat: new project angular

--- a/angular/client/src/app/login/sign-in/sign-in.component.html
+++ b/angular/client/src/app/login/sign-in/sign-in.component.html
@@ -1,7 +1,7 @@
 <div class="login-container">
   <form class="login-form" #loginForm="ngForm">
     <mat-form-field hideRequiredMarker appearance="outline">
-      <mat-label>{{ 'general.email' | translate }}</mat-label>
+      <mat-label>{{ 'Email'}}</mat-label>
       <input
         matInput
         noWhiteSpace
@@ -28,7 +28,7 @@
     </mat-form-field>
 
     <mat-form-field hideRequiredMarker appearance="outline">
-      <mat-label>{{ 'general.password' | translate }}</mat-label>
+      <mat-label>{{ 'Senha'}}</mat-label>
       <input
         matInput
         required
