--- a/angular/client/src/app/home/layouts/header/header.component.html
+++ b/angular/client/src/app/home/layouts/header/header.component.html
@@ -7,7 +7,7 @@
       <button
         mat-icon-button
         class="logout-btn"
-        matTooltip="{{ 'general.logout' | translate }}"
+        matTooltip="Sair"
         [matTooltipClass]="'tooltip-brand-primary'"
         (click)="logout()"
       >
