--- a/angular/client/src/app/home/welcome/welcome.component.html
+++ b/angular/client/src/app/home/welcome/welcome.component.html
@@ -1,35 +1,8 @@
 <div class="welcome-area">
   <div>
-    <h1>{{ 'welcome.welcome-message' | translate }}</h1>
-    <img alt="Guide Me" src="../../../assets/images/welcome-page/guideme.svg" />
-    <h2>{{ 'welcome.welcome-second-message' | translate }}</h2>
+    <h1>{{'Seja bem vindo ao' }}</h1>
+    <img alt="soc" src="../../../assets/images/homelogo.png" />
   </div>
-
-  <img
-    alt="Man"
-    class="man-img"
-    src="../../../assets/images/welcome-page/man.svg"
-  />
-  <img
-    alt="INDT"
-    class="indt-img"
-    src="../../../assets/images/welcome-page/indt.png"
-  />
 </div>
 
-<div class="text-area">
-  <h1>
-    {{ 'welcome.goal-message' | translate }}
-  </h1>
-  <h3>
-    {{ 'welcome.goal-second-message' | translate }}
-  </h3>
-</div>
-
-<div>
-  <img
-    alt="Components Banner"
-    src="../../../assets/images/welcome-page/components-banner.svg"
-  />
-</div>
 
