--- a/angular/client/src/app/login/login.component.html
+++ b/angular/client/src/app/login/login.component.html
@@ -3,7 +3,7 @@
     <img
       alt="Guide Me"
       class="logo"
-      src="../../../assets/images/welcome-page/guideme.svg"
+      src="../../../assets/images/soc.png"
     />
     <div class="login-card">
       <router-outlet></router-outlet>
