--- a/angular/client/src/app/home/layouts/menu-list/menu-list.component.html
+++ b/angular/client/src/app/home/layouts/menu-list/menu-list.component.html
@@ -4,43 +4,10 @@
       <mat-icon>menu</mat-icon>
     </button>
     <img
-      src="../../../../assets/images/brand-guideme.png"
-      alt="Guide Me"
+      src="../../../../assets/images/menuicon.png"
+      alt="soc"
       *ngIf="menuOpen"
     />
-  </mat-list-item>
-
-  <mat-list-item
-    (click)="toggleMenuMobile()"
-    class="user-list-item"
-    [ngClass]="{ 'options-height': menuOpen }"
-    routerLink="/account"
-    routerLinkActive="active"
-  >
-    <div>
-      <div
-        class="img-container"
-        [ngClass]="{ 'img-container-margin': !menuOpen }"
-      >
-        <img crossorigin="anonymus" src="{{ userImage }}" alt="User" />
-      </div>
-
-      <div>
-        <p *ngIf="menuOpen" class="username-label">
-          {{ user.name }}
-        </p>
-      </div>
-    </div>
-  </mat-list-item>
-
-  <mat-list-item
-    (click)="toggleMenuMobile()"
-    routerLink="/welcome"
-    routerLinkActive="active"
-    class="menu-list-item"
-  >
-    <mat-icon>home</mat-icon>
-    <p *ngIf="menuOpen">{{ 'general.home' | translate }}</p>
   </mat-list-item>
 
   <mat-list-item
@@ -51,14 +18,5 @@
   >
     <mat-icon>account_circle</mat-icon>
     <p *ngIf="menuOpen">{{ 'user.users' | translate }}</p>
-  </mat-list-item>
-  <mat-list-item
-    (click)="toggleMenuMobile()"
-    routerLink="/charts"
-    routerLinkActive="active"
-    class="menu-list-item"
-  >
-    <mat-icon>bar_chart</mat-icon>
-    <p *ngIf="menuOpen">{{ 'charts.charts' | translate }}</p>
-  </mat-list-item>
+</mat-list-item>
 </mat-nav-list>
